// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`WorfklowCompleted rendering tests stepCount 1 - test 1`] = `
<div>
  <div
    class="flex flex-wrap items-center justify-end gap-4"
    data-testid="workflow-completed"
  >
    <div
      class="flex items-center gap-3"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-check h-5 w-5 animate-in text-green-600 duration-300 zoom-in-50"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="m9 12 2 2 4-4"
        />
      </svg>
      <div>
        <span
          class="font-semibold text-foreground"
        >
          Workflow abgeschlossen
        </span>
        <p
          class="mt-0.5 text-xs text-muted-foreground"
        >
          1
           
          Schritt
           
          durchlaufen
        </p>
      </div>
    </div>
    <div
      class="flex gap-3"
    >
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-9 px-4 py-2 has-[>svg]:px-3"
        data-slot="button"
        data-testid="restart-btn"
      >
        Von vorne starten
      </button>
    </div>
  </div>
</div>
`;

exports[`WorfklowCompleted rendering tests stepCount 5 - test 1`] = `
<div>
  <div
    class="flex flex-wrap items-center justify-end gap-4"
    data-testid="workflow-completed"
  >
    <div
      class="flex items-center gap-3"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-check h-5 w-5 animate-in text-green-600 duration-300 zoom-in-50"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="m9 12 2 2 4-4"
        />
      </svg>
      <div>
        <span
          class="font-semibold text-foreground"
        >
          Workflow abgeschlossen
        </span>
        <p
          class="mt-0.5 text-xs text-muted-foreground"
        >
          5
           
          Schritte
           
          durchlaufen
        </p>
      </div>
    </div>
    <div
      class="flex gap-3"
    >
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-9 px-4 py-2 has-[>svg]:px-3"
        data-slot="button"
        data-testid="restart-btn"
      >
        Von vorne starten
      </button>
    </div>
  </div>
</div>
`;
